2010-08-23  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/updatechecker: Some adjustments on a couple of strings. 


2010-08-22  Frank Lanitz  <frank@frank.uvena.de>

 * Initial release

